# fastapi-clean-arch-template

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml  requirements.dev.txt  requirements.txt
migrations/: env.py
migrations/versions/2026/02/: 28_2332_03_5ccaa0fac84e_init.py
migrations/versions/2026/03/: 01_0041_15_c15f08754904_onupdate_users.py
src/: config.py  main.py
src/api/: exception_handlers.py
src/api/v1/: __init__.py  users.py
src/core/: database.py  enums.py  uow.py
src/domain/: exceptions.py
src/domain/repositories/: __init__.py  base.py  user.py
src/domain/services/: __init__.py  users.py
src/models/: __init__.py  _mixins.py  base.py  users.py
src/schemas/: base.py  users.py
src/schemas/common/: __init__.py  pagination.py  response.py
